--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,11 @@
 html,
 body {
-  height: 100vh;
-  padding: 0;
-  margin: 0;
+  height: 100dvh;
+  overscroll-behavior: none;
 }
 
 body {
-  margin: 0;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
